media/css/plan.css
.com_easystaging_mgr_last_run {
	font-style: italic;
	color: silver;
}

.icon-48-easystaging {
	background-image: url("../images/EasyStaging-48-icon.png");
}

#com_easystaging_plan_tabs div.current {
	background-color: white;
}

#com_easystaging_plan_tabs div.current p.tab-description {
	font-style: italic;
}

.table_name, .action {
	width: 150px;
}
.table_name, .action, .action_result {
	font-weight: bold;
}

#lastRunStatus {
	font-weight: bold;
	height: 20px;
	padding-left: 25px;
	padding-top: 5px;
}

.planUpdatesDiv, #lastRunStatus {
	margin: 0px 0px 34px 34px;
}

#startFileBtn {
	background: url("../images/orange-1.png") no-repeat 0px 0px;
}
#startDBaseBtn {
	background: url("../images/blue-2.png") no-repeat 0px 0px;
}
#startAllBtn {
	background: url("../images/green-3.png") no-repeat 0px 0px;
}
#startFileBtn, #startDBaseBtn, #startAllBtn {
	height: 32px;
	padding-top:10px;
	padding-bottom:10px;
}
#startFile, #startDBase, #startAll {
	margin: 34px;
	height: 32px;
}

#startFileBtn.com_easystaging_plan_btn_off,
#startDBaseBtn.com_easystaging_plan_btn_off,
#startAllBtn.com_easystaging_plan_btn_off {
	background-position-y: -32px;
}

#currentStatus {
	line-height: 1.5em;
	overflow:scroll;
	max-height: 250px;
	padding: 5px 0px 5px 10px;
}
.waiting {
	background: url("../images/spinning.gif") no-repeat;
}

.es_ajax_error_msg {
	font-weight:bold;
	color:red;
}

